Finally - a new Subversion commit (changes from 3 years...)
git-svn-id: file:///Users/andrewregan/Development/SVN/repos/trunk/Bloggers4Labour@350 aa2b285a-0eb0-49ca-9bdb-c93b1c50f45f